updated deploy script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ClarenceCat.github.io/rFavorites",
+  "homepage": "https://clarencecat.github.io/rFavorites/",
   "name": "rfavorites",
   "version": "0.1.0",
   "private": true,
